website/static/css/custom.css
/* your custom css */
.gray-background{
    background: #FBFBFB;
}
.fixedHeaderContainer{
    padding: 10px 0;
}
.headerTitleWithLogo{
   /* PARTNER PORTAL: */
    font-family: 'Raleway', Arial, Helvetica, sans-serif;
    font-weight: 300;
    font-size: 11px !important;
    color: #D2D8E3;
    letter-spacing: 0.5px;
    line-height: 18.72px;
    margin: auto;
    padding-left: 10px;
    padding-top: 5px;
}
.algolia-autocomplete{
    z-index: 10001 !important;
}
.card-categories{
    
     background: #FFFFFF;
     border-radius: 5px;
     box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.05);
     width: 300px;
     padding:10px 10px;
     margin: 20px;
     cursor: pointer;
 }
 .flex-categories-container{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
 }
.main-title {
    font-family: 'Raleway', Arial, Helvetica, sans-serif;
    text-align: center;
    font-size: 24px;
    font-weight: 600;
    letter-spacing: 0;
    color: white;
    line-height: 1;
}

.section-card-title {
    font-family: 'Raleway', Arial, Helvetica, sans-serif;
    text-align: center;
    font-size: 20px;
    font-weight: 400;
    line-height: 30px;
    letter-spacing: 0;
    color: black;
    margin-bottom: 0;
    margin-top: 0px ;
    font-weight: 600;
}
div#home-wrapper {
    padding-bottom: 0px;
    padding-top: 0px;
}
ul.nav-site.nav-site-internal li a{
    color: white;
    font-weight: 600;
    font-family: 'Raleway', Arial, Helvetica, sans-serif;
    font-size: 16px;
}
.primary-button {
    height: 40px;
    background: #F57C41;
    border-radius: 4px;
    display: block;
    font-weight: 600;
    color: #fff;
    letter-spacing: 1px;
    margin: auto;
    max-width: 300px;
    padding: 5px 12px;
    width: 100%;
    text-align: center;
    margin-top: 5px;
    border: none;
    cursor: pointer;
}
.primary-button:hover{
    text-decoration: none;
    color: white !important;
    background: #F57C41 !important;
}
.primary-button:focus{
    outline:0;
}
.docMainWrapper{
    padding-left: 20px;
    padding-right: 20px;
}
.primary-color {
    color: #F57C41 !important;
}
#documentation-page .homeContainer{
    background-size: cover;
    background-image: -webkit-linear-gradient(138deg, #016CFF 0%, #029EFF 100%);
    background-image: -o-linear-gradient(138deg, #016CFF 0%, #029EFF 100%);
    background-image: linear-gradient(-48deg, #016CFF 0%, #029EFF 100%);
}
.navigationSlider .slidingNav ul{
    background: #1C3E75;
}
.footer{
    background: #FBFBFB;
    padding-top: 10px;
}
.footer p{
    text-align: center;
    font-weight: 300;
    line-height: 24px;
    letter-spacing: .76px;
    font-size: 14px;
    font-family: 'Raleway', Arial, Helvetica, sans-serif;
}
#main-title{
    padding: 10px 0 10px;
    margin: 0;
}
.main-description{
    padding: 10px 0 10px;
    margin: 0;
    color: white;
    text-align: center;
    font-size: 17px;
    font-family: 'Roboto', Arial, Helvetica, sans-serif;
    font-weight: 300;
    line-height: 1;
}
.full-row {
    width: 100%;
}

.dropdown{
    display: none;
    position: absolute;
    top: 50px;
    border-radius: 0px 0px 10px 10px;
    background: #214b8e;
    height: auto;
    width: auto;
    left: -10px;
}
.dropdown .column{
    width: auto;
}
.dropdown-item {
    font-size: 80% !important;
    display: block !important;
    height: auto !important;
    text-align: start !important;
    margin-top: 0px !important;
    padding: 10px 20px !important;
}

.flex{
    display: flex;
}

#nav-item-dropdown{
    position: relative;
    cursor: pointer;
}
img[src*="#thumbnail"] {
    width:100%;
    border: 1px solid whitesmoke;
}
img[src*="#thumbnail-80"] {
    width:80%;
    border: 1px solid whitesmoke;
}
img[src*="#thumbnail-60"] {
    width:60%;
    border: 1px solid whitesmoke;
}
img[src*="#thumbnail-40"] {
    width:40%;
    border: 1px solid whitesmoke;
}
img[src*="#thumbnail-20"] {
    width:20%;
    border: 1px solid whitesmoke;
}

@media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
}

@media only screen and (min-width:768px){
    .docMainWrapper{
        padding-left: 60px;
        padding-right: 60px;
   }
   .main-title{
        text-align: center;
        font-size: 32px;
    }
    .main-description{
        text-align: center;
        font-size: 18px;
        padding-left: 0px;
    }
    div#home-wrapper {
        padding-left: 0px;
        padding-right: 0px;
        max-width: 1160px;
    }
    .headerWrapper{
        padding-left: 60px;
        padding-right: 60px;
   }
    ul.nav-site.nav-site-internal li .primary-button{
        width: 100px;
   }
    .headerWrapper header a{
        height: 40px;
   }
    .fixedHeaderContainer header img {
        height: 100%;
        margin-right: 0px;
        height: auto;
        width: 90px;
   }
   .card-categories{
    
     width: 30%;
     margin: 0 30px 30px;
     padding: 20px 20px;
     margin-bottom: 30px;
    }
    #home-page .card-categories .section-card-title{
        
         font-size: 20px;
    }

    #documentation-page .flex-categories-container{
        max-width: 900px;
        margin: auto;
        justify-content: flex-end;
    }

    #documentation-page .card-categories{
        margin: 0 30px 30px;
        width: 350px;
    }
}

@media only screen and (min-width: 1024px) {
    
    .section-card-title {
        font-size: 20px;
        text-align: center;
        margin-bottom: 0;
        margin-top: 0px;
   }
    .flex-container{
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
   }
    .flex-container .two-row{
        max-width: 50%;
   }
    ul.nav-site.nav-site-internal li a{
        padding: 0 15px;
        /*
        padding: 5px 30px 5px;
        */
   }
    .top-fold-image{
        max-width: 100%;
   }
    #nav-item-dropdown::after{
        /*
        right:-5px;
        display: block;
        content: '';
        position: absolute;
        top: 13px;
        width: 0;
        height: 0;
        border-left: 7px solid transparent;
        border-right: 7px solid transparent;
        border-top: 7px solid white;
        clear: both;
        */
    }
    
}

@media only screen and (max-width: 1023px) {
}

@media only screen and (min-width: 1160px) {
    .docMainWrapper{
        max-width: 1160px !important;
        margin: auto;
        padding-left: 0px;
        padding-right:0px;
        padding-top: 20px;
   }
   .main-title{
        text-align: start;
    }
    .main-description{
        text-align: start;
    }
    .headerWrapper{
        max-width: 1160px !important;
        padding: 0 0;
   }
    ul.nav-site.nav-site-internal li .primary-button{
        width: 100px;
        height: 30px;
        font-size: 14px;
        margin-left:20px;
        margin-top: 2px;
   }
}

@media only screen and (min-width: 1400px) {
}

@media only screen and (min-width: 1500px) {
    .headerWrapper{
        max-width: 1400px !important;
        padding: 0 0;
   }
    .docMainWrapper{
        max-width: 1400px !important;
        padding: 0 0;
   }

   div#home-wrapper {
        max-width: 1400px !important;
    }
}

